2004-01-15  Zoltan Varga  <vargaz@freemail.hu>

	* runtime/Makefile.am: Add al.exe.

2004-01-10  Jackson Harper <jackson@ximian.com>

	* data/machine.config: Add trace handler (Trace.axd) add trace
	configuration handlers.
	
2004-01-06  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* doc/books: Added books on Web Services and ASP.NET

2004-01-04  Daniel Morgan <danielmorgan@verizon.net>

	* monowiz.win32.nsi: update the NSIS installer script for windows
	  to support NSIS 2.0 rc1 and Mono 0.29

2003-12-22  Bernie Solomon  <bernard@ugsolutions.com>

	* configure.in: missed in my last change

	* samples/embed/testi.c: interpreter embedding example

	* docs/embedded-api: add info on interpreter embedding

Mon Dec 22 18:27:14 CET 2003 Paolo Molaro <lupus@ximian.com>

	* configure.in, acconfig.h: use mach semaphores on darwin.

2003-12-22  Bernie Solomon  <bernard@ugsolutions.com>

	* Makefile.am: Create mint.pc
	mint.pc.in: Added for embedding the interpreter

2003-12-16  Martin Baulig  <martin@ximian.com>

	* Makefile.am: In a Makefile.am, comments are started with `#' and
	not with `dnl' - I must have been an idiot ...

2003-12-10  Todd Berman <tberman@gentoo.org>

	* configure.in: adding libicu url to the ICU: no message.

2003-12-05  John Luke  <jluke@cfl.rr.com>

	* data/config.in: new dll mapping entry for libgstreamer
	
2003-12-02  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* README: tiny fix ;-)

2003-11-26  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Add -fno-strict-aliasing to CFLAGS.
	
	* configure.in: Applied patch from recht@netbsd.org. Avoid linking in
	librt if not neccesary.

2003-11-24  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Fix signbit check. Fixes #51315.

2003-11-20  Jackson Harper <jackson@ximian.com>

	* data/machine.config: Add OutputCacheModule
	
2003-11-19  Jackson Harper <jackson@ximian.com>

	* doc/web/team.xml: New email address and job description
	* doc/web/team/jackson.png: Picture of me debugging...seems appropriate
	